--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=vehicle-service
 management.endpoints.web.exposure.include=*
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/vehicle_db
+spring.datasource.url=jdbc:mysql://mysql-container:3306/vehicle_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
